--- a/about.html
+++ b/about.html
@@ -5,8 +5,7 @@
   </head>
   <body>
     <h1>About us</h1>
-    <!-- Add something here to fix trademark -->
-    <p>
+    <meta charset="utf-8">    <p>
       This site is a sample project for the <strong>awesome</strong> Git 
       tutorial <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to be Dangerous</em></a>.
     </p>
