--- a/about.html
+++ b/about.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <title>About us</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <h1>About us</h1>
-    <meta charset="utf-8">    <p>
+    <a href="index.html">Home</a>
+        <p>
       This site is a sample project for the <strong>awesome</strong> Git 
       tutorial <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to be Dangerous</em></a>.
     </p>
